# startwrt

./: Cargo.toml  README.md  angular.json  package-lock.json  package.json
identity-psk/: README.md
secprofbox/: Cargo.toml
secprofbox/src/: dumbuci.rs  firewall.rs  lib.rs  main.rs  map.rs  monitor.rs  secprofmap.rs  state.rs  watchutil.rs  wpactrl.rs
secprofbox/src/hostapdhook/: mod.rs
secprofbox/src/watchwifi/: mod.rs
src/app/: app.component.spec.ts
uciedit/: Cargo.toml
uciedit/src/: lib.rs  openwrt.rs
uciedit_macros/: Cargo.toml
uciedit_macros/src/: lib.rs
ucisink/: Cargo.toml
ucisink/src/: lib.rs
ucisink_macros/: Cargo.toml
ui/: .gitignore  package-lock.json  package.json  proxy.conf.json
ui/src/: main.ts
ui/src/app/: app.component.ts
ui/src/libluci/: README.md  firewall.d.ts  firewall.js  fs.js  luci.js  network.d.ts  network.js  rpc.d.ts  rpc.js  uci.d.ts  uci.js  validation.js
ui/src/services/: network.service.ts
