[package]
name = "secprofbox"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
fd-lock-rs = "0.1.4"
inpt = "0.1.3"
tracing = "0.1.40"
tracing-rfc-5424 = "0.1.2"
tracing-subscriber = "0.3.18"

[dependencies.rust-uci]
git = "https://github.com/Start9Labs/rust-uci.git"

[features]
default = ["hostapdhook", "secprofmap"]
hostapdhook = []
secprofmap = []
