[package]
name = "secprofbox"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
fd-lock-rs = "0.1.4"
inpt = "0.1.3"
tokio = { version = "1.41.1", features = ["tracing", "process", "socket2", "time", "io-util", "macros", "rt"] }
tracing = "0.1.40"
tracing-rfc-5424 = "0.1.2"
tracing-subscriber = "0.3.18"

[features]
default = ["secprof-watchwifi", "secprof-map"]
secprof-watchwifi = []
secprof-map = []
