[package]
name = "secprofbox"
version = "0.1.0"
edition = "2021"

[dependencies]
async_cell = "0.2.2"
color-eyre = "0.6.3"
futures = "0.3.31"
inpt = "0.1.3"
nix = { version="0.29.0", features = ["fs"] }
pin-project = "1.1.9"
tokio = { version = "1.41.1", features = ["tracing", "process", "socket2", "time", "io-util", "macros", "rt", "sync", "net", "rt-multi-thread", "io-std"] }
tracing = "0.1"
tracing-rfc-5424 = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["secprof-watchwifi", "secprof-map"]
secprof-watchwifi = []
secprof-map = []
